--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -19,6 +19,11 @@
                         <input class="layui-input" type="text" name="" width="80px" placeholder="请输入用户名">
                     </div>
 
+
+
+                </div>
+
+                <div class="layui-form-item">
                     <label class="layui-form-label">部门：</label>
                     <div class="layui-input-inline">
                         <select name="interest" lay-filter="aihao">
@@ -27,17 +32,24 @@
                         </select>
                     </div>
 
-                    <div class="layui-input-inline layui-btn-container">
+                    <label class="layui-form-label">角色：</label>
+                    <div class="layui-input-inline">
+                        <select name="interest" lay-filter="aihao">
+                            <option value="0">写作</option>
+                            <option value="1">阅读</option>
+                        </select>
+                    </div>
+
+                    <div class="layui-input-inline layui-btn-container" style="margin-left: 50px">
                         <button type="submit" class="layui-btn" lay-submit="" lay-filter="demo1">查找</button>
                         <button type="reset" class="layui-btn layui-btn-primary">重置</button>
                     </div>
-
                 </div>
             </form>
 
-            <div class="layui-col-md2">
-                <button type="button" class="layui-btn">
-                    <i class="layui-icon">&#xe608;</i> 添加用户
+            <div class="layui-col-md2" id="layerDemo">
+                <button data-method="offset" data-type="auto" class="layui-btn layui-btn-normal">
+                        <i class="layui-icon">&#xe608;</i> 添加用户
                 </button>
             </div>
 
@@ -47,16 +59,17 @@
                lay-filter="demo" lay-skin="line">
             <thead>
             <tr>
-                <th lay-data="{field:'id', align:'center', sort: true}">用户ID</th>
+                <th lay-data="{field:'roleId', align:'center', sort: true}">用户ID</th>
                 <th lay-data="{field:'userName', align:'center'}">用户名称</th>
-                <th lay-data="{field:'deptId', align:'center'}">部门名称</th>
+                <th lay-data="{field:'deptName', align:'center', templet: '<div>{{d.department.deptName != null ? d.department.deptName : \'\'}}</div>'}">部门名称</th>
                 <th lay-data="{field:'userStatus', align:'center'}">用户状态</th>
-                <th lay-data="{field:'userRole', align:'center'}">用户角色</th>
+                <th lay-data="{field:'roleName', align:'center', templet: '<div>{{d.role[0].roleName != null ? d.role[0].roleName : \'\'}}</div>'}">用户角色</th>
                 <th lay-data="{fixed: 'right', width:178, align:'center', toolbar: '#barDemo'}">操作</th>
             </tr>
             </thead>
         </table>
     </div>
+
     <script id="barDemo" type="text/html">
         <a class="layui-btn layui-btn-xs" lay-event="edit">
             <i class="layui-icon layui-icon-edit">编辑</i>
@@ -111,6 +124,40 @@
                 var type = $(this).data('type');
                 active[type] ? active[type].call(this) : '';
             });
+        });
+
+        layui.use('layer', function(){ //独立版的layer无需执行这一句
+            var $ = layui.jquery, layer = layui.layer; //独立版的layer无需执行这一句
+
+            //触发事件
+            var active = {
+                offset: function(othis){
+                    var type = othis.data('type')
+                        ,text = othis.text();
+
+                    layer.open({
+                        type: 2
+                        ,offset: type //具体配置参考：http://www.layui.com/doc/modules/layer.html#offset
+                        ,id: 'layerDemo'+type //防止重复弹出
+                        ,title: '新增用户'
+                        ,content: '/page/accountAdd'
+                        ,area: ['500px','510px']
+                        ,closeBtn: 1
+                        // ,btn: '关闭全部'
+                        // ,btnAlign: 'c' //按钮居中
+                        ,shade: 0 //不显示遮罩
+                        ,yes: function(){
+                            layer.closeAll();
+                        }
+                    });
+                }
+            };
+
+            $('#layerDemo .layui-btn').on('click', function(){
+                var othis = $(this), method = othis.data('method');
+                active[method] ? active[method].call(this, othis) : '';
+            });
+
         });
     </script>
 
