--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,10 +51,10 @@
                     <a class="" href="javascript:;">系统配置</a>
                     <dl class="layui-nav-child">
                         <dd><a href="/page/account" target="iframeMain">人员管理</a></dd>
-                        <dd><a href="javascript:;">部门管理</a></dd>
-                        <dd><a href="javascript:;">权限管理</a></dd>
-                        <dd><a href="javascript:;">角色管理</a></dd>
-                        <dd><a href="">菜单管理</a></dd>
+                        <dd><a href="/page/deptManager" target="iframeMain">部门管理</a></dd>
+                        <dd><a href="/page/authManager" target="iframeMain">资源管理</a></dd>
+                        <dd><a href="/page/roleManager" target="iframeMain">角色管理</a></dd>
+                        <dd><a href="/page/menuManager" target="iframeMain">菜单管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
