--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                     <dd><a href="">安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退出</a></li>
+            <li class="layui-nav-item"><a href="/page/login">退出</a></li>
         </ul>
 
     </div>
@@ -52,7 +52,7 @@
                     <dl class="layui-nav-child">
                         <dd><a href="/page/account" target="iframeMain">人员管理</a></dd>
                         <dd><a href="/page/deptManager" target="iframeMain">部门管理</a></dd>
-                        <dd><a href="/page/authManager" target="iframeMain">资源管理</a></dd>
+                        <dd><a href="/page/resManager" target="iframeMain">资源管理</a></dd>
                         <dd><a href="/page/roleManager" target="iframeMain">角色管理</a></dd>
                         <dd><a href="/page/menuManager" target="iframeMain">菜单管理</a></dd>
                     </dl>
@@ -60,7 +60,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">日志管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">登录日志</a></dd>
+                        <dd><a href="/page/logManager" target="iframeMain">登录日志</a></dd>
                     </dl>
                 </li>
                 <!--<li class="layui-nav-item">
